mycms/media/readingStyle.css
#whiteBorder{
    background-color: #EDEEE1;
    height: 900px;  /*hardcoded */
    width: 1292px;
    position: relative;
    left: 0px;
    top: 200px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 200px;
    padding-left: 30px;
    padding-right: 30px;
	
}

#amplifyHeading{
	font-family: 'Bitter', serif;
	font-size: 72pt;
	color: #009DAE;
        position: absolute;
        width: 365px;
        text-align: center;
        z-index: 999;


}

#innovationsWholeDiv{      /*includes nav div for easier hovering.*/
    position: absolute;
    padding-left: 25px;

/*    width: 718px;*/
/*    height: 167px;*/
    z-index: -1;
/*   border-bottom: 5px solid #00CCCC;*/
 }



#allIssueLinks{
    background-color: #F5F9E7;
    position: absolute;
    z-index: 1000;
    opacity: 0; /* 0.95; */
    color: #605C5B;

}

.issueLinks{
	font-size: 13pt;
        font-family: bitter;
        line-height: 1.4;
        position: relative;
        opacity: 1.0;
        padding-right: 35px;
}

#allCategories{
    padding-left: 35px;
}

.innovCategories{
        font-family: bitter;
        font-size: 10pt;
        display: inline;
        margin-left: 0;
        padding-left: 5px;
        padding-right: 15px;
        border-left: 1px solid grey;
        

}

#currentCategory{
    display: inline;
    font-weight: 900;
    border-right: none;
}

.innovArticleTitles{
    font-family: helvetica;
    font-size: 10pt;
    padding-left: 60px;
    font-weight: normal;
}

#currentArticle{
    background-color: #00CCCC;
    font-weight: bold;
}

#abstractTitle{
/*	font-family: 'Patua One', cursive;*/
/*	font-family: 'Headland One', serif;*/
	font-family: 'Bitter', serif;
/*	font-size: 48pt;*/
    font-size: 32pt;
	text-align: center;
	color: #009DAE;
	width: 350px;
/*        padding-left: 15px;*/
        padding-right: 15px;
        padding-top: 20px;
        text-align: left;
        position: relative;

}

#abstractRest{
    width: 320px; /*350*/
    position: relative;
	font-size: 10pt;
	font-family: helvetica;
	position: relative;
	padding-left: 15px;
	padding-right: 15px;
        padding-top: 10px;
        padding-bottom: 10px;
        line-height: 1.2em;
	background-color: #F5F9E7;
}





.clear{
    /* display: none */
    overflow:hidden;
    display: none;
}

#wholeLeftCol{
/*background-color: #D5D6C2;*/
/*position: fixed;*/
/*overflow: scroll;*/
}

/* height set in readingSetup based on abstractTitle */
#outline{
    overflow-y: auto;
    height: 520px;
    width: 350px;
    position: absolute;
    padding-bottom: 10px;
    border-left: 1px solid grey;
	background-color: #F5F9E7;

    
	
}


.outlineBox{
    font-size: 10pt;
    font-family: helvetica;
    padding-top: 10px;
    padding-left: 15px;
    padding-right: 10px;
    line-height: 1.2em;

}

.outlineTitle{
	padding-bottom: 5px;
	font-weight: bold;
	border-bottom: 1px solid grey;
        margin-bottom: 5px;
        font-family: 'Bitter';
        color: #3d3d3d;
}

.outlineRest{
	padding-bottom: 20px;
        margin-bottom: 5px;
}


#article{
    font-family: helvetica;
    font-size: 10pt;
    line-height: 1.2em;
    background-color: white;
	width: 500px;
	position: relative;
/* 	padding-bottom: 20px;  */
  /*      padding-top: 20px;*/
/*	padding-left: 35px;*/
	padding-right: 50px;
        position: relative;
	display: inline;
	float:left;
}

#articleTitle{
    float: right;
	background-color: #EDEEE1;
        width: 750px;
/*        padding-left: 50px; /*match article padding-left padding*/
/*	padding-right: 75px;*/
/*	padding-bottom: 15px;*/
	text-align: left;
/*        padding-top: 15px;*/
	font-size: 30pt;
	font-family: helvetica;
        position: relative;
        padding-right: 15px;
        padding-top: 20px;

        


}

#articleMainTitle{
    display: inline;
//    float: left; 
    font-weight: 800;
    position: relative;
//    margin-right: 10px;
}

#articleSubtitle{
    position: relative;
  //  float: left;
    font-weight: normal;
    display: inline;
    text-align: left;
    font-size: 22pt;
        
}

.author-heading{
	font-size: 14pt;
}

.author-ref{
    font-weight: bold;
}

#reference{
    /*background-color: white;*/
/*    padding-bottom:60px;*/
    position:relative;
/*    padding-left: 50px;*/
/*    padding-right: 10px;*/
    display:inline;

/*    left: 35px;*/
}



#wholeRightCol{
    background-color: white;
    float: right;
    overflow-y: scroll;
    /*overflow-x: hidden;*/
    width: 840px;
    height: 547px;
    padding-left: 50px;*/
}

.artPar{
}


.footNumber{
    color: #009DAE;
/*    color: #EE4624; /* tangerine */
/*    color: #99CC00;             /*lime green*/
}

.refNum{
   display: inline;
   font-size:8pt;
   line-height: 1.2em;
   color: #009DAE;
}

h2{
    line-height:1.1em;
}


.references{
    font-size:8pt;
    line-height: 1.2em;
}

.references a {
    text-decoration: none;
    color: #EE4624; /*tangerine */
}

.references a:hover {
    color: #00CCCC;
    text-decoration: underline;
}

#nav, #nav ul{
    z-index:1000; 
    font-family: 'Bitter';
     font-size:14pt;
     margin:0;
     padding:0;
     list-style-type:none;
     list-style-position:outside;
     position:relative;
     line-height:2em;
     display:inline;
 }


 #nav a:link, #nav a:active, #nav a:visited{
    display:block;
    padding:0px 5px;
    border:1px solid #333;
    color:#fff;
    text-decoration:none;
    background-color:#333;
 }


#nav a:hover{

    background-color:#fff;
    color:#333;
}


#nav li{
    float:left;
    position:relative;
}

#nav ul {
 /*   position:absolute;*/
    position: relative;
    width:18em;
    top:1.5em;
    display:none;
}

#nav li ul a{
/*    width:18em;                 */
    float:left;
}

#nav li ul li {
    width: 300px;
}
 
#nav ul ul{
	top:auto;
	}

#nav li ul ul {xb
    left:18em;
    margin:0px 0 0 10px;
    }

#nav li:hover ul ul, #nav li:hover ul ul ul, #nav li:hover ul ul ul ul{
    display:none;
    }
#nav li:hover ul, #nav li li:hover ul, #nav li li li:hover ul, #nav li li li li:hover ul{
    display:block;
    }


/* style specific to homepage */
#map{
    position: absolute;
}

